--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
       startCameraAndTrack();
     };
   </script>
-  <script src="Build/MyWebARProject.loader.js"></script>
+  <script src="Build/WebAR.loader.js"></script>
 </body>
 </html>
